# fsharp

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG-fsharp.md  CHANGES.txt  CONTRIBUTING.md  FSharp.Core.Portable.sln  ISSUE_TEMPLATE.md  LICENSE  Makefile  Makefile.in  NuGet.Config  README  README-original.md  README.html  README.md  appveyor.ps1  appveyor.yml  autogen.sh  build-everything.proj  build-mono.sh  build-windows-installer.bat  build.bat  build.cmd  build.sh  config.make.in  configure.ac  fsharp.sln  index.html  launcher.in  packages.config  params.json  prepare-mono.sh  sourcelink.cmd  sourcelink.fsx  style.css  travis-autogen.sh
.nuget/: NuGet.Config
FSharp.Compiler.Tools.Nuget/: FSharp.Compiler.Tools.3.1.nuspec  FSharp.Compiler.Tools.4.0.nuspec  FSharp.Compiler.Tools.nuspec  build.cmd
FSharp.Compiler.Tools.Nuget/buildCrossTargeting/: FSharp.Compiler.Tools.props
FSharp.Compiler.Tools.Nuget/sdk/: README.md
FSharp.Core.Nuget/: FSharp.Core.3.0.0.0.nuspec  FSharp.Core.3.0.0.1.nuspec  FSharp.Core.3.0.nuspec  FSharp.Core.3.1.1.0.nuspec  FSharp.Core.3.1.1.1.nuspec  FSharp.Core.3.1.2.nuspec  FSharp.Core.3.1.nuspec  FSharp.Core.4.0.nuspec  FSharp.Core.Microsoft.0.0.1.nuspec  FSharp.Core.Microsoft.Signed.3.0.nuspec  FSharp.Core.Microsoft.Signed.3.1.nuspec  FSharp.Core.Microsoft.Signed.nuspec  FSharp.Core.Mono.0.0.1.nuspec  FSharp.Core.Mono.DelaySigned.3.1.nuspec  FSharp.Core.Mono.Signed.nuspec  FSharp.Core.nuspec  build.cmd  migrate.cmd
FSharp.Tools.Nuget/: FSharp.Tools.3.1.nuspec  build.cmd
dotnet-tools/: project.json
lib/bootstrap/2.0/: FSharp.Build.dll.mdb  FSharp.Build.xml  FSharp.Compiler.dll.mdb  FSharp.Compiler.xml  FSharp.Core.dll.mdb  FSharp.Core.optdata  FSharp.Core.sigdata  FSharp.Core.xml  FSharp.PowerPack.targets  FSharp.SRGen.targets  fsc.exe.mdb  fsc.xml
lib/bootstrap/4.0/: FSharp.Build.dll.mdb  FSharp.Build.xml  FSharp.Compiler.dll.mdb  FSharp.Compiler.xml  FSharp.Core.dll.mdb  FSharp.Core.optdata  FSharp.Core.sigdata  FSharp.Core.xml  FSharp.SRGen.Build.Tasks.dll.config  FSharp.SRGen.targets  FsLexYacc.Build.Tasks.dll.config  FsLexYacc.targets  Microsoft.FSharp-proto.targets  Microsoft.FSharp.Targets  Microsoft.FSharp.targets  fsc.exe.mdb  fsi.xml  fssrgen.exe.config
lib/netcore/: build-fsc-netcore.proj
lib/netcore/fsc/: Program.cs  project.json
lib/release/2.0/: FSharp.Core.dll.mdb  FSharp.Core.optdata  FSharp.Core.sigdata  FSharp.Core.xml
lib/release/2.1/: FSharp.Core.dll.mdb  FSharp.Core.optdata  FSharp.Core.sigdata  FSharp.Core.xml
lib/release/4.0/: FSharp.Build.dll.mdb  FSharp.Build.xml  FSharp.Compiler.Interactive.Settings.dll.mdb  FSharp.Compiler.Interactive.Settings.xml  FSharp.Compiler.Server.Shared.dll.mdb  FSharp.Compiler.Server.Shared.xml  FSharp.Compiler.dll.mdb  FSharp.Compiler.xml  FSharp.Core.dll.mdb  FSharp.Core.xml  (+7 more)
mono/: appveyor.ps1  config.make  config.make.in  prepare-mono.sh  travis-autogen.sh
samples/FSI.Intellisense/: FSI.Intellisense.fsproj  Parser.fs  Program.fs
samples/FSIApp/: CompilerStreams.fs  FSIApp.fsproj  FSIApp.sln  Program.fs  script.fsx
src/: ChangeLog  FSharpSource.Settings.targets  FSharpSource.targets  all-vs2010.sln  all-vs2012.sln  all-vs2013.sln  fsharp-build.proj  fsharp-compiler-build.proj  fsharp-compiler-unittests-build.proj  fsharp-library-build.proj  fsharp-library-unittests-build.proj  fsharp-proto-build.proj  root.traversal.targets  source-build-version  source-build-version-2.3.5.0  source-build-version-2.3.588.0  source-build-version-4.3.0.0
src/absil/: bytes.fs  bytes.fsi  il.fs  il.fsi  ilascii.fs  ilascii.fsi  ilbinary.fs  ilbinary.fsi  ildiag.fs  ildiag.fsi  illex.fsl  illib.fs  ilmorph.fs  ilmorph.fsi  ilpars.fsy  ilprint.fs  ilprint.fsi  ilread.fs  ilread.fsi  ilreflect.fs  ilsupp.fs  ilsupp.fsi  ilwrite.fs  ilwrite.fsi  ilwritepdb.fs  ilwritepdb.fsi  ilx.fs  ilx.fsi  zmap.fs  zmap.fsi  zset.fs  zset.fsi
src/assemblyinfo/: assemblyinfo.FSharp.Build.dll.fs  assemblyinfo.FSharp.Compiler.Interactive.Settings.dll.fs  assemblyinfo.FSharp.Compiler.Private.dll.fs  assemblyinfo.FSharp.Compiler.Server.Shared.dll.fs  assemblyinfo.FSharp.Compiler.Silverlight.dll.fs  assemblyinfo.FSharp.Compiler.dll.fs  assemblyinfo.FSharp.Core.dll.fs  assemblyinfo.FSharp.Data.TypeProviders.dll.fs  assemblyinfo.FSharp.LanguageService.Base.dll.cs  assemblyinfo.FSharp.LanguageService.dll.fs  assemblyinfo.FSharp.ProjectSystem.Base.dll.cs  assemblyinfo.FSharp.ProjectSystem.FSharp.dll.fs  assemblyinfo.FSharp.VS.FSI.dll.fs  assemblyinfo.Salsa.dll.fs  assemblyinfo.fsc.exe.fs  assemblyinfo.fsi.exe.fs  assemblyinfo.fsi.hosted.dll.fs
src/fsharp/: .#targets.make  CompileOps.fs  CompileOptions.fs  ErrorLogger.fs  ExtensibleDumper.fs  ExtensibleDumper.fsi  ExtensionTyping.fs  FSComp.txt  FSCstrings.txt  FSInteractiveSettings.txt  FSStrings.resx  FlatList.fs  InternalCollections.fs  InternalCollections.fsi  InternalFileSystemUtils.fs  InternalFileSystemUtils.fsi  MSBuildReferenceResolver.fs  Makefile.in  NameResolution.fs  NicePrint.fs  PrettyNaming.fs  QueueList.fs  ReferenceResolution.fs  ReferenceResolution.fsi  TastOps.fs  TraceCall.fs  TraceCall.fsi  TypeChecker.fs  ast.fs  augment.fs  augment.fsi  build.fs  build.fsi  ccuthunk.fs  check.fs  check.fsi  creflect.fs  creflect.fsi  csolve.fs  csolve.fsi  (+63 more)
src/ilx/: cu_erase.fs  cu_erase.fsi  ilxsettings.fs  pubclo.fs  pubclo.fsi
src/scripts/: fssrgen.fsx  scriptlib.fsx
src/setup/: License.rtf  fsharp-side-by-side.wxs
src/utils/: CompilerLocationUtils.fs  HashMultiMap.fs  HashMultiMap.fsi  TaggedCollections.fs  TaggedCollections.fsi  ThreeList.fs  filename.fs  filename.fsi  prim-lexing.fs  prim-lexing.fsi  prim-parsing.fs  prim-parsing.fsi  resizearray.fs  resizearray.fsi  sformat.fs  sformat.fsi
tests/: .gitignore  ChompErr.bat  build-and-run.bat  build.bat  config.bat  run.bat  run40.bat  run40d.bat  tdirs
tests/FSharp.Build.UnitTests/: project.json
tests/fsharp/: FSharp.Tests.fsproj  single-neg-test.bat  single-test-build.bat  single-test-run.bat  tdirs
tests/hosting/: hosted.fsx
tests/projects/: build.sh
tests/scripts/: fsci.fsx
(+843 files in other folders)
